# synapse-cereplex-driver

./: .gitignore  .gitmodules  Makefile  README.md  compile_protos.py  pyproject.toml  requirements.txt
synapse/: autodiscovery.py  main.py  rpc.py  streaming_data.py
synapse-api/: README.md
synapse-api/api/: channel.proto  datatype.proto  node.proto  query.proto  status.proto  synapse.proto
synapse-api/api/nodes/: electrical_broadband.proto  electrical_stim.proto  optical_broadband.proto  optical_stim.proto  spectral_filter.proto  spike_detect.proto  stream_in.proto  stream_out.proto
synapse-api/doc/: network_config.md
synapse/server/: main.py  ndtp.py  nodes.py  rpc.py  status.py  streaming_data.py
synapse/server/nodes/: __init__.py  base.py  electrical_broadband.py  optical_stimulation.py  stream_in.py  stream_out.py
synapse_cereplex/: __init__.py  __main__.py  electrical_broadband.py
