[project]
name = "synapse-cereplex"
version = "0.1.0"
description = "Synapse driver for Blackrock CerePlex systems"
authors = [
    {name = "Science Team", email = "team@science.xyz"},
]
dependencies = [
]
readme = "README.md"
license = {text = "TBD"}

[tool.pdm.dev-dependencies]
dev = [
]

[tool.pdm]
distribution = false
